修复文件下载崩溃

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RetrofitUtils</string>
+    <string name="app_name">RetrofitClient</string>
     <string name="get">Get请求</string>
     <string name="download">Download下载</string>
     <string name="get_request">Get</string>
